--- a/share/xml/csg_defaults.xml.in
+++ b/share/xml/csg_defaults.xml.in
@@ -598,15 +598,24 @@
       </post_update>
       <post_update_options>
 	      <DESC>Contains all options of post update scripts</DESC>
+	      <cibi>
+	        <DESC>Contains all options of the Kirkwood-Buff integral corrections scripts</DESC>
+	        <do>1
+	        <DESC>Update cycle for the Kirkwood-Buff integral correction (1 do, 0 do not). To do the correction every third step specify "0 0 1", similar to do_potential</DESC>
+	        </do>
+	        <kbint_with_errors>no
+	        <DESC>calculate errors on the Kirkwood-Buff integral: yes/no</DESC>
+	        </kbint_with_errors>no
+	      </cibi>
 	      <extrapolate>
 	        <points>5
 	        <DESC>Number of point to calculate the average from for the extrapolation</DESC>
 	        </points>
 	      </extrapolate>
 	      <kbibi>
-	        <DESC>Contains all options of the Kirkwood-Buff corrections scripts</DESC>
+	        <DESC>Contains all options of the Kirkwood-Buff ramp corrections scripts</DESC>
 	        <do>1
-	        <DESC>Update cycle for the Kirkwood-Buff correction (1 do, 0 do not). To do the correction every third step specify "0 0 1", similar to do_potential</DESC>
+	        <DESC>Update cycle for the Kirkwood-Buff ramp correction (1 do, 0 do not). To do the correction every third step specify "0 0 1", similar to do_potential</DESC>
 	        </do>
 	        <factor>
 	          <DESC>scaling factor for the ramp correction</DESC>
@@ -623,9 +632,6 @@
 	        <stop>
 	          <DESC>Where to stop averaging the Kirkwood-Buff integral for the ramp</DESC>
 	        </stop>
-	        <type>ramp
-	        <DESC>Type of correction to be done: ramp/integral</DESC>
-	        </type>
 	      </kbibi>
 	      <pressure>
 	        <DESC>Contains all options of the pressure correction scripts</DESC>
