--- a/.travis.yml
+++ b/.travis.yml
@@ -36,15 +36,17 @@ env:
   global:
     - HDF5_VERSION=1.8.14
     - GMX_MAX_THREADS=8
-    - CCACHE_CPP2=yes
+    - CCACHE_CPP2=yes #for clang
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
     - CTP=yes WERROR=yes J=4
     - CTP=yes WALL=yes J=4
     - XTP=yes WERROR=yes J=4
     - XTP=yes WALL=yes J=4
     - WALL=yes GMX_DOUBLE=yes J=4
-    - WALL=yes GMX_VERSION=5.1 J=4
-    - WALL=yes GMX_VERSION=5.1 GMX_DOUBLE=yes J=4
+    - WALL=yes GMX_VERSION=5.0 J=4
+    - WALL=yes GMX_VERSION=5.0 GMX_DOUBLE=yes J=4
+    - WALL=yes GMX_VERSION=2016 J=4
+    - WALL=yes GMX_VERSION=2016 GMX_DOUBLE=yes J=4
     - WALL=yes GMX_VERSION=9999 J=4
     - WALL=yes GMX_VERSION=9999 GMX_DOUBLE=yes J=4
     - J=1
@@ -78,20 +80,11 @@ env:
     - CSG_MDRUN_STEPS=500 TEST=urea-water/kb-ibi J=4
     - CSG_MDRUN_STEPS=500 TEST=He-Ar/imc J=4
 
-matrix:
-  allow_failures:
-    - compiler: clang
-      env: WALL=yes GMX_VERSION=9999 J=4
-    - compiler: clang
-      env: WALL=yes GMX_VERSION=9999 GMX_DOUBLE=yes J=4
-
 before_script:
   - rm -vrf * .git
   - wget https://raw.githubusercontent.com/votca/buildutil/master/build.sh && chmod 755 build.sh
-  - mkdir -p "$HOME/votca/src" "$HOME/votca/share/votca/scripts/inverse" "$HOME/bin"
+  - mkdir -p "$HOME/votca/src" "$HOME/votca/share/votca/scripts/inverse"
   - wget -O "$HOME/votca/share/votca/scripts/inverse/cma.py" http://www.lri.fr/~hansen/cma.py
-  - ln -s /usr/bin/ccache "$HOME/bin/clang++"
-  - ln -s /usr/bin/ccache "$HOME/bin/clang"
   - if [[ ${MINIMAL} != yes ]]; then 
       wget -qO- https://www.hdfgroup.org/ftp/HDF5/releases/hdf5-${HDF5_VERSION}/src/hdf5-${HDF5_VERSION}.tar.gz | tar -xz &&
       cd hdf5-${HDF5_VERSION} && ./configure --prefix=$HOME/hdf5 && make -j4 &> /dev/null && make install && cd ..;
@@ -99,7 +92,7 @@ before_script:
   - if [[ ${MAN} ]]; then git clone --depth=1 https://github.com/votca/doxygen.git "$HOME/votca/src/devdoc"; fi 
 
 script:
-  - PATH="$HOME/bin:$HOME/hdf5:/usr/lib/ccache:$PATH" ./build.sh -Wu --dev --prefix "$HOME/votca" ${MAN:+--devdoc}
+  - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu --dev --prefix "$HOME/votca" ${MAN:+--devdoc}
     ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} -DWITH_H5MD=ON ${MINIMAL:+--minimal}
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall} ${GMX_VERSION:+--gmx-release ${GMX_VERSION}}
     --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF ${GMX_DOUBLE:+-DGMX_DOUBLE=yes}
@@ -123,9 +116,7 @@ after_success:
     fi
 
 cache:
-  directories:
-    - $HOME/.ccache
+  - ccache
 
 compiler:
-  - clang
   - gcc
