--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,8 @@ env:
     - BDIR=build J=1
     - MAN=yes J=4
     - MINIMAL=yes J=4
-    - CSG_MDRUN_STEPS=500 TEST=hexane/ibi_bonded J=4 GMX_VERSION=5.0
-    - CSG_MDRUN_STEPS=500 TEST=hexane/ibi J=4 GMX_VERSION=5.0
+    - CSG_MDRUN_STEPS=500 TEST=hexane/ibi_bonded J=4
+    - CSG_MDRUN_STEPS=500 TEST=hexane/ibi J=4
     - CSG_MDRUN_STEPS=500 TEST=methanol/ibi J=4
     - CSG_MDRUN_STEPS=10000 TEST=methanol/imc J=4
     - CSG_MDRUN_STEPS=5000 TEST=methanol-water/X_0.938/re J=4
@@ -62,8 +62,8 @@ env:
     - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.062/simplex J=4
     - CSG_MDRUN_STEPS=5000 TEST=methanol-water/X_0.5/re J=4
     - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.5/simplex J=4
-    - CSG_MDRUN_STEPS=500 TEST=propane/ibi J=4 GMX_VERSION=5.0
-    - CSG_MDRUN_STEPS=10000 TEST=propane/imc J=4 GMX_VERSION=5.0
+    - CSG_MDRUN_STEPS=500 TEST=propane/ibi J=4
+    - CSG_MDRUN_STEPS=10000 TEST=propane/imc J=4
     - CSG_MDRUN_STEPS=500 TEST=spce/cma/density J=4
     - CSG_MDRUN_STEPS=500 TEST=spce/cma/simple J=4
     - CSG_MDRUN_STEPS=500 TEST=spce/ibi J=4
