--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,10 +182,16 @@ add_custom_target(manual DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/manual/xtp-manual.p
 
 add_custom_target(cleanmanual COMMAND make clean -C ${CMAKE_SOURCE_DIR}/manual
 	XTP_SCRIPTS="${XTP_SCRIPTS}"
+	CSG_PROPERTY="${VOTCA_CSG_PROPERTY}"
+	VER="${PROJECT_VERSION}"
+	ROOTDIR="${CMAKE_CURRENT_SOURCE_DIR}/manual"
 	XTP_PROGS="${XTP_PROGS}" VERBATIM)
 
 add_custom_target(installmanual COMMAND make install -C ${CMAKE_SOURCE_DIR}/manual
 	XTP_SCRIPTS="${XTP_SCRIPTS}"
+	CSG_PROPERTY="${VOTCA_CSG_PROPERTY}"
+	VER="${PROJECT_VERSION}"
+	ROOTDIR="${CMAKE_CURRENT_SOURCE_DIR}/manual"
 	XTP_PROGS="${XTP_PROGS}"
-    XTP_MANUAL_LOCATION="${CMAKE_INSTALL_PREFIX}/${XTP_MANUAL_LOCATION}" VERBATIM)
+	XTP_MANUAL_LOCATION="${CMAKE_INSTALL_PREFIX}/${XTP_MANUAL_LOCATION}" VERBATIM)
 add_dependencies(installmanual manual)
