--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,7 +175,7 @@ add_subdirectory(share)
 add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/manual/xtp-manual.pdf COMMAND make -C ${CMAKE_SOURCE_DIR}/manual
 	XTP_SCRIPTS="${XTP_SCRIPTS}"
 	CSG_PROPERTY="${VOTCA_CSG_PROPERTY}"
-	VER="${PROJECT_VERSION}"
+	VER=${PROJECT_VERSION}
 	ROOTDIR="${CMAKE_CURRENT_SOURCE_DIR}/manual"
 	XTP_PROGS="${XTP_PROGS}" VERBATIM)
 add_custom_target(manual DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/manual/xtp-manual.pdf)
