--- a/.travis.yml
+++ b/.travis.yml
@@ -90,7 +90,7 @@ before_script:
   - mkdir -p "$HOME/votca/src" "$HOME/votca/share/votca/scripts/inverse"
   - wget -O "$HOME/votca/share/votca/scripts/inverse/cma.py" http://www.lri.fr/~hansen/cma.py
   - if [[ ${MINIMAL} != yes ]]; then 
-      wget -qO- https://www.hdfgroup.org/ftp/HDF5/releases/hdf5-${HDF5_VERSION}/src/hdf5-${HDF5_VERSION}.tar.gz | tar -xz &&
+      wget -qO- https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-${HDF5_VERSION}/src/hdf5-${HDF5_VERSION}.tar.gz | tar -xz &&
       cd hdf5-${HDF5_VERSION} && ./configure --prefix=$HOME/hdf5 && make -j4 &> /dev/null && make install && cd ..;
     fi
   - if [[ ${GMX_VERSION} = 9999 ]]; then
